# Project-BYTZ

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  biome.json  bytz-frontend-22-3.html  docker-compose.prod.yml  docker-compose.yml  lefthook.yml  nginx-api-gateway.conf  package.json  tsconfig.json  turbo.json  vitest.config.ts
.github/workflows/: ci.yml
apps/admin/: Dockerfile  index.html  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
apps/admin-service/: Dockerfile  cover.out  go.mod  go.sum  main.go  package.json
apps/admin-service/features/: admin.feature  admin_test.go
apps/admin-service/src/: index.ts
apps/admin/src/: main.tsx  routeTree.gen.ts  styles.css
apps/ai-service/: .coverage  Dockerfile  main.py  pyproject.toml
apps/ai-service/.hypothesis/constants/: 26ce14321554fc6c  3caff923594bb55c  57079023d62ce546  993c5f4275c1da61  a255ded7eb465d39  cb969d9151bc812f  da39a3ee5e6b4b0d  e26f2a94e7dbed1c
apps/ai-service/app/models/: schemas.py
apps/ai-service/app/routes/: __init__.py  ai.py  health.py
apps/ai-service/app/services/: cv_parser.py
apps/ai-service/tests/: conftest.py  test_ai_chat_bdd.py  test_ai_routes.py  test_atdd_acceptance.py  test_atdd_schema.py  test_bdd_cv.py  test_bdd_endpoints.py  test_cv_parser.py  test_cv_parsing_bdd.py  test_health.py  test_schemas.py
apps/ai-service/tests/features/: ai_chat.feature  ai_endpoints.feature  cv_parsing.feature
apps/auth-service/: Dockerfile  package.json
apps/auth-service/src/: index.ts
apps/gateway/: centrifugo-prod.json  centrifugo.json  dynamic.yml  nats-init-streams.sh  otel-collector-config.yaml  temporal-dynamic-config.yaml  tensorzero.toml  traefik.yml
apps/notification-service/: Dockerfile  cover.out  go.mod  go.sum  main.go  package.json
apps/notification-service/features/: notification.feature  notification_test.go
apps/notification-service/src/: index.ts
apps/payment-service/: Dockerfile  cover.out  go.mod  go.sum  main.go  package.json
apps/project-service/: Dockerfile  package.json  tsconfig.json
apps/web/: Dockerfile  index.html  nginx.conf  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
docs/templates/: brd-template.tex  prd-template.tex
(+234 files in other folders)
